[tool.poetry]
name = "gitenvy"
version = "0.1.2"
description = "A library to manage encrypted .env files with Git as a single source of truth"
authors = ["Swapnil Sawant <swapnil.ravi10@gmail.com>"]
license = "MIT"
homepage = "https://github.com/swapnilravi10/gitenvy"
repository = "https://github.com/swapnilravi10/gitenvy"
keywords = ["gitenv", "encryption", "git", "secrets", "gitenvy"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.1"
pyyaml = "^6.0"
cryptography = "^41.0"
gitpython = "^3.1"

[tool.poetry.scripts]
gitenvy = "gitenvy.cli:cli"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
