[metadata]
name = dotenvy
version = 0.1.0
description = A library to manage encrypted .env files with Git as a single source of truth
author = Swapnil Sawant
license = MIT
url = https://github.com/swapnilravi10/dotenvy
keywords = dotenv, encryption, git, secrets

[options]
packages = find:
install_requires =
    click>=8.1
    pyyaml>=6.0
    cryptography>=41.0
    gitpython>=3.1

[options.entry_points]
console_scripts =
    dotenvy=dotenvy.cli:cli
